libsafecxx/test/compile-fail/rc1.cxx
// Copyright 2024 Christian Mazakas
// Distributed under the Boost Software License, Version 1.0. (See accompanying
// file LICENSE.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

#feature on safety

#include <std2/rc.h>

int main()
{
  std2::rc<int> p{1337};
  p = 7331;
}
